tests/snapshots/sfc/ts/patches__top_level_await_generates_async_setup.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createElementBlock as _createElementBlock, toDisplayString as _toDisplayString, unref as _unref } from "vue"


export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  async setup(__props) {

const response = await fetch('/api/data')
const data = await response.json()

return (_ctx: any,_cache: any) => {
  return (_openBlock(), _createElementBlock("div", null, _toDisplayString(_unref(data)), 1 /* TEXT */))
}
}

})
