tests/snapshots/sfc/ts/patches__v_if_with_v_bind_object_spread.snap
---
source: crates/vize_atelier_sfc/src/snapshot_tests.rs
expression: ts_output.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { openBlock as _openBlock, createBlock as _createBlock, createCommentVNode as _createCommentVNode, createTextVNode as _createTextVNode, mergeProps as _mergeProps, withCtx as _withCtx } from "vue"

import { ref, computed } from 'vue'
import Button from './Button.vue'

export default /*@__PURE__*/_defineComponent({
  __name: 'test',
  setup(__props) {

const isActive = ref(true)
const buttonProps = computed(() => ({ disabled: false, type: 'primary' }))

return (_ctx: any,_cache: any) => {
  return (isActive.value)
      ? (_openBlock(), _createBlock(Button, _mergeProps(buttonProps.value, {
        key: 0,
        onClick: _cache[0] || (_cache[0] = (...args) => (_ctx.handleClick && _ctx.handleClick(...args)))
      }), {
        default: _withCtx(() => [
          _createTextVNode("\n    Click me\n  ")
        ]),
        _: 1 /* STABLE */
      }))
      : _createCommentVNode("v-if", true)
}
}

})
